--- a/Flash Chat/Info.plist
+++ b/Flash Chat/Info.plist
@@ -28,6 +28,7 @@
 				<string>com.googleusercontent.apps.1095525289299-ie2v4frj0beqd6ihorqc68aage8p2ofi</string>
 			</array>
 		</dict>
+		<dict/>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
